--- a/index.html
+++ b/index.html
@@ -27,65 +27,72 @@
 </head>
 <body>
     <div id="button-container">
-        <button id="top-button">頁面最頂端</button>
-        <button id="bottom-button">最底端</button>
+        <button id = "top-button">Top</button>
+        <button id = "bottom-button">Button</button>
     </div>
     <script>
-        const targetElement = document.getElementById('button-container');
         const bringToFrontButton = document.getElementById('top-button');
         const sendToBackButton = document.getElementById('bottom-button');
 
         bringToFrontButton.addEventListener('click', function() {
-        targetElement.style.zIndex = '9999';
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
         });
 
         sendToBackButton.addEventListener('click', function() {
-        targetElement.style.zIndex = '-9999';
+            window.scrollTo({
+                top: document.documentElement.scrollHeight,
+                behavior: 'smooth'
+            });
         });
     </script>
-    <header>
-    <!-- 第一個區塊banner -->
-    <nav class="navbar navbar-expand-lg bg-danger-subtle">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Home</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Analysis Table</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Web
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Youtube</a></li>
-                  <li><a class="dropdown-item" href="#">Tik tok</a></li>
-                  <li><a class="dropdown-item" href="#">instagram</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+    <div class = 'container'>
+        <header>
+        <!-- nav -->
+        <nav class="navbar navbar-expand-lg bg-danger-subtle">
+            <div class="container-fluid">
+            <a class="navbar-brand text-with-shadow" aria-current="page" href="#" >Home</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link text-with-shadow" href="#">Analysis Table</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link text-with-shadow" href="#">Link</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle text-with-shadow" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Web
+                    </a>
+                    <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Youtube</a></li>
+                    <li><a class="dropdown-item" href="#">Tik tok</a></li>
+                    <li><a class="dropdown-item" href="#">instagram</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <!-- <a class="nav-link disabled">Disabled</a> -->
+                    <a class="nav-link text-with-shadow" href = "#">Try</a>
+                </li>
                 </ul>
-              </li>
-              <li class="nav-item">
-                <!-- <a class="nav-link disabled">Disabled</a> -->
-                <a class="nav-link" href = "#">Try</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn bg-danger text-light fw-medium" type="submit">Search</button>
-            </form>
-          </div>
-        </div>
-    </nav>
-    </header>
+                <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn bg-danger text-light fw-medium" type="submit">Search</button>
+                </form>
+            </div>
+            </div>
+        </nav>
+        </header>
+    </div>
     <!-- 第一個區塊banner -->
-    <section id="intro" style="background: linear-gradient(45deg, rgba(171, 205, 209, 0.9), transparent) 60%, url(pictures/arrow.jpg) no-repeat center;background-size: cover;">    
+    <section id="intro"  style = "background: linear-gradient(-10deg, #FCAEAE, transparent) 60%, url(pictures/arrow.jpg) no-repeat center;background-size: cover;">    
         <div class = "jumbotron">
             <div class = "container"> <!-- 如果css有變化 就用div -->
                 <!-- 先佔位置 -->
