--- a/index.html
+++ b/index.html
@@ -30,24 +30,6 @@
         <button id = "top-button">Top</button>
         <button id = "bottom-button">Button</button>
     </div>
-    <script>
-        const bringToFrontButton = document.getElementById('top-button');
-        const sendToBackButton = document.getElementById('bottom-button');
-
-        bringToFrontButton.addEventListener('click', function() {
-            window.scrollTo({
-                top: 0,
-                behavior: 'smooth'
-            });
-        });
-
-        sendToBackButton.addEventListener('click', function() {
-            window.scrollTo({
-                top: document.documentElement.scrollHeight,
-                behavior: 'smooth'
-            });
-        });
-    </script>
     <div class = 'container'>
         <header>
         <!-- nav -->
@@ -70,9 +52,9 @@
                     Web
                     </a>
                     <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Youtube</a></li>
-                    <li><a class="dropdown-item" href="#">Tik tok</a></li>
-                    <li><a class="dropdown-item" href="#">instagram</a></li>
+                    <li><a class="dropdown-item" href="https://support.google.com/youtube/answer/9314356?hl=zh-Hant">Youtube</a></li>
+                    <li><a class="dropdown-item" href="https://www.ikjzd.com/articles/147794">Tik tok</a></li>
+                    <li><a class="dropdown-item" href="https://www.ig-hero.com/ig%E6%B5%81%E9%87%8F%E6%80%8E%E9%BA%BC%E7%9C%8B-%E6%8F%90%E5%8D%87%E6%B5%81%E9%87%8F3%E5%A4%A7%E7%A7%98%E8%A8%A3/">instagram</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
@@ -95,16 +77,20 @@
     <section id="intro"  style = "background: linear-gradient(-10deg, #FCAEAE, transparent) 60%, url(pictures/arrow.jpg) no-repeat center;background-size: cover;">    
         <div class = "jumbotron">
             <div class = "container"> <!-- 如果css有變化 就用div -->
-                <!-- 先佔位置 -->
-                <div class = "col-8 col-md-3"> <!-- column 中  12欄(滿版)-->
-                    <h1 class = "display-4 text-bg-danger fw-medium">流量的來源</h1>
-                    <h1 class = "display-6 text-bg-danger fw-medium">我來告訴你</h1>
-                    <!-- display 再調整大小 -->
-                    <h4 class = "text-dark mt-3">source</h4>
-                    <a class = "btn bg-secondary btn-lg text-light fw-medium" href = "#" role = "button">你也可以</a>
-                    <!-- # 是假連結 -->
+                <div class="col-lg-3 col-md-6" style="padding-right: 0; margin-right: -15px;">
+                    <h1 class="display-5 fw-medium" style="margin-right: -15px; background-color: transparent; color: #3e1616; position: absolute; top: 6%; left: 17%; transform: translate(-20%, -60%);">流量的來源</h1>
+                </div>               
+                <div class="col-lg-3 col-md-6" style="padding-right: 0;">
+                      <h1 class="display-6 text-bg-secondary fw-medium" style="margin-right: 0;position: absolute; top:60%; left: 17%; transform: translate(-20%, -60%);">我來告訴你</h1>
                 </div>
-            </div>
+                <div class="col-lg-2 col-md-6">
+                      <h4 class="text-dark mt-3">source</h4>
+                </div>
+               
+                <div class="col-lg-2 col-md-6" style="position: relative;">
+                    <a class="btn bg-secondary btn-lg text-light fw-medium" href="#" role="button" style="position: absolute; top: 80%; left: 10%; transform: translate(72%, -60%);">你也可以</a>
+                </div>
+            </div> 
         </div>
     </section>
     <!-- 第二個區塊介簡 -->
@@ -133,17 +119,17 @@
         <div class = "container"> 
             <div class = "row">  
                 <div class = "col-md-12 text-certer"> 
-                        <h4>新資訊</h4>
+                        <h4>相關連結網站</h4>
                     <div class = "row"> 
                         <div class = "col-md-4 text-left"> 
                             <div class = 'outer'>
-                                <a href = '#'>
-                                    <div class = 'upper'>
-                                        <img src = "pictures/arrow.jpg"> 
+                                <a href = 'https://www.lalamove.com/zh-tw/blog/%E4%B8%80%E6%AC%A1%E6%90%9E%E6%87%82%E5%A4%A7%E6%95%B8%E6%93%9A'>
+                                    <div class = 'upper' style="max-width: 100%;">
+                                        <img src = "pictures/大數據.jpg" style="max-width: 100%; height: auto; aspect-ratio: 5/3.5;"> 
                                     </div>
                                     </a>    
                                     <div class = "lower"> 
-                                        <h4>新快報</h4>
+                                        <h6 style="white-space: normal;">Do you really understand big data?</h6>
                                         <span><i class="fa-solid fa-arrow-up-wide-short"></i>asda</span>
                                         <!-- i font awesome -->
                                         <span><i class="fa-solid fa-arrow-up-right-dots"></i>wenfe</span>
@@ -152,14 +138,14 @@
                         </div>
                         <div class = "col-md-4 text-left"> 
                             <div class = 'outer'>
-                                <a href = '#'>
-                                    <div class = 'upper'>
-                                        <img src = "pictures/arrow.jpg"> 
+                                <a href = 'http://www.asia-learning.com/course/itemlist/103100'>
+                                    <div class = 'upper' style="max-width: 100%;">
+                                        <img src = "pictures/sources_map.jpg" style="max-width: 100%; height: auto; aspect-ratio: 5/3.5;"> 
                                     </div>
                                     </a>    
                                     <div class = "lower"> 
-                                        <h4>第二快報</h4>
-                                        <span><i class = 'fas fa-map-marker-alt'></i>asda</span>
+                                        <h6 style="white-space: normal;">Where does your data come from?</h6>
+                                        <span><i class = 'fas fa-map-marker-alt'></i></span>
                                         <!-- i font awesome -->
                                         <span><i class = 'fas fa-clock'></i>wenfe</span>
                                     </div>
@@ -167,13 +153,13 @@
                         </div>
                         <div class = "col-md-4 text-left"> 
                             <div class = 'outer'>
-                                <a href = '#'>
-                                    <div class = 'upper'>
-                                        <img src = "pictures/arrow.jpg"> 
+                                <a href = 'https://www.yourator.co/articles/277'>
+                                    <div class = 'upper' style="max-width: 100%;">
+                                        <img src = "pictures/category.jpg" style="max-width: 100%; height: auto; aspect-ratio: 5/3.5;"> 
                                     </div>
                                     </a>    
                                     <div class = "lower"> 
-                                        <h4>第三快報</h4>
+                                        <h6>"Do we do different things?</h6>
                                         <span><i class = 'fas fa-map-marker-alt'></i>asda</span>
                                         <!-- i font awesome -->
                                         <span><i class = 'fas fa-clock'></i>wenfe</span>
@@ -239,12 +225,12 @@
         <div class = 'container'>
             <div class = 'row'>
                 <div class = 'col-md-8 offset-md-2 text-center'>
-                    <h4>加入Email</h4>
+                    <h4>與我們聯繫</h4>
                 </div>
             </div>
             <div class = 'row'>
                 <div class = 'col-md-8 offset-md-2 text-center'>
-                    <p>立刻收到最新消息</p>
+                    <p>開始了解你的數據吧！</p>
                     <div class="mb-3">
                         <label for="exampleFormControlInput1" class="form-label">Email address</label>
                         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
@@ -282,5 +268,6 @@
             </div>
         </div>
     </footer>
+    <script src= "js/script.js"></script>
 </body>
 </html>
