--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- nav -->
         <nav class="navbar navbar-expand-lg bg-danger-subtle">
             <div class="container-fluid">
-            <a class="navbar-brand text-with-shadow" aria-current="page" href="#" >Home</a>
+            <a class="navbar-brand text-with-shadow" aria-current="page" href="https://jay900411.github.io/index.html" >Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -78,17 +78,19 @@
         <div class = "jumbotron">
             <div class = "container"> <!-- 如果css有變化 就用div -->
                 <div class="col-lg-3 col-md-6" style="padding-right: 0; margin-right: -15px;">
-                    <h1 class="display-5 fw-medium" style="margin-right: -15px; background-color: transparent; color: #3e1616; position: absolute; top: 6%; left: 17%; transform: translate(-20%, -60%);">流量的來源</h1>
+                    <h1 class="display-5 fw-medium" >流量的來源</h1>
+                    <!-- style="margin-right: -15px; background-color: transparent; color: #3e1616; position: absolute; top: 6%; left: 17%; transform: translate(-20%, -60%);" -->
                 </div>               
                 <div class="col-lg-3 col-md-6" style="padding-right: 0;">
-                      <h1 class="display-6 text-bg-secondary fw-medium" style="margin-right: 0;position: absolute; top:60%; left: 17%; transform: translate(-20%, -60%);">我來告訴你</h1>
+                      <h1 class="display-6 text-bg-secondary fw-medium" >我來告訴你</h1>
+                      <!-- style="margin-right: 0;position: absolute; top:60%; left: 17%; transform: translate(-20%, -60%);" -->
                 </div>
                 <div class="col-lg-2 col-md-6">
                       <h4 class="text-dark mt-3">source</h4>
-                </div>
-               
+                </div>               
                 <div class="col-lg-2 col-md-6" style="position: relative;">
-                    <a class="btn bg-secondary btn-lg text-light fw-medium" href="#" role="button" style="position: absolute; top: 80%; left: 10%; transform: translate(72%, -60%);">你也可以</a>
+                    <a class="btn bg-secondary btn-lg text-light fw-medium" href="#" role="button" >我有興趣!</a>
+                    <!-- style="position: absolute; top: 80%; left: 10%; transform: translate(72%, -60%);" -->
                 </div>
             </div> 
         </div>
