--- a/index2.html
+++ b/index2.html
@@ -35,7 +35,7 @@
         <!-- nav -->
         <nav class="navbar navbar-expand-lg bg-danger-subtle">
             <div class="container-fluid">
-            <a class="navbar-brand text-with-shadow" aria-current="page" href="#" >Home</a>
+            <a class="navbar-brand text-with-shadow" aria-current="page" href="https://jay900411.github.io/index.html" >Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
