--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link text-with-shadow" href="https://jay900411.github.io/analysis.html">Analysis Table</a>
+                    <a class="nav-link text-with-shadow" href="analysis.html">Analysis Table</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-with-shadow" href="#">Link</a>
