--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!-- nav -->
         <nav class="navbar navbar-expand-lg bg-danger-subtle">
             <div class="container-fluid">
-            <a class="navbar-brand text-with-shadow" aria-current="page" href="https://jay900411.github.io/index.html" >Home</a>
+            <a class="navbar-brand text-with-shadow" aria-current="page" href="index.html" >Home</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -45,8 +45,8 @@
                     <a class="nav-link text-with-shadow" href="analysis.html">Analysis Table</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-with-shadow" href="#">Link</a>
-                </li>
+                    <a class="nav-link text-with-shadow" href="javascript:void(0)" onclick="scrollToKeyword(event)">Link</a>
+                  </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-with-shadow" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Web
@@ -61,7 +61,7 @@
                 </li>
                 <li class="nav-item">
                     <!-- <a class="nav-link disabled">Disabled</a> -->
-                    <a class="nav-link text-with-shadow" href = "#">Try</a>
+                    <a class="nav-link text-with-shadow" href = "try.html">Try</a>
                 </li>
                 </ul>
                 <form class="d-flex" role="search">
