--- a/try.html
+++ b/try.html
@@ -72,59 +72,35 @@
         </header>
     </div>
     <section>
-        <div class = 'container'>
-            <div class="col-md-6">
-                &nbsp;
-            </div>
-        </div>
-        <div class = 'container'>
-            <div class="col-md-6">      
-                <div class="dropdown">
-                    <button class="btn bg-danger text-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    選擇要分析的網站
-                    </button>
-                    <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Youtube</a></li>
-                    <li><a class="dropdown-item" href="#">Tik tok</a></li>
-                    <li><a class="dropdown-item" href="#">instagram</a></li>
-                    </ul>
+        <div class = "container">
+            <div class="col-md-6"> 
+                <div class="col-md-6">
+                    &nbsp;
                 </div>
                 <div class="col-md-6">
                     &nbsp;
                 </div>
-                <div class="mb-3">
-                    <label for="formFileMultiple" class="form-label">檔案1</label>
-                    <input class="form-control" type="file" id="formFileMultiple" multiple>
+                <div class="col-md-6">
+                    &nbsp;
                 </div>
                 <div class="col-md-6">
                     &nbsp;
                 </div>
-                <div class="mb-3">
-                    <label for="formFileMultiple" class="form-label">檔案2</label>
-                    <input class="form-control" type="file" id="formFileMultiple" multiple>
-                </div>
+                <h4>what would you like to try ?</h4>
+                <h4>nothing here !</h4>
                 <div class="col-md-6">
                     &nbsp;
                 </div>
-                <div class="mb-3">
-                    <label for="formFileMultiple" class="form-label">檔案3</label>
-                    <input class="form-control" type="file" id="formFileMultiple" multiple>
+                <div class="col-md-6">
+                    &nbsp;
+                </div><div class="col-md-6">
+                    &nbsp;
                 </div>
-                <!-- <div class="mb-3">
-                    <label for="formFileDisabled" class="form-label">Disabled file input example</label>
-                    <input class="form-control" type="file" id="formFileDisabled" disabled>
-                </div> -->
-                <!-- <div class="mb-3">
-                    <label for="formFileSm" class="form-label">Small file input example</label>
-                    <input class="form-control form-control-sm" id="formFileSm" type="file">
-                </div> -->
-                <!-- <div>
-                    <label for="formFileLg" class="form-label">Large file input example</label>
-                    <input class="form-control form-control-lg" id="formFileLg" type="file">
-                </div> -->
+                
             </div>
         </div>
     </section>
+ 
     <!-- 第一個區塊banner -->
     <!-- 第二個區塊介簡 -->
     <!-- 第三個區塊介簡 -->
